# to_do

./: .gitignore  123456  README.md  manage.py  pyproject.toml  requirements.txt
api/: permissions.py  serializers.py  urls.py  views.py
tasks/: admin.py  models.py  urls.py  views.py
tasks/migrations/: 0001_created_task_models.py  0002_alter_todoitem_todo_list.py
templates/: base.html
templates/account/: base.html
templates/tasks/: index.html  todo_list.html  todoitem_confirm_delete.html  todoitem_form.html  todolist_confirm_delete.html  todolist_form.html
todo/: settings.py  urls.py
users/migrations/: 0001_created_user_model.py
