[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Georgy Borodin <borodin@mybook.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-allauth = "^0.53.1"
django-rest-framework = "^0.1.0"
markdown = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
